sf crud ops
